5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1764_1189.log
== TEST (2019-05-30 12:42:26) 
-- CODE:
from numpy import*

x=input("").upper
a=x.replace("","")

i=0
o=-1

while(i<len(a)):
	if(i[a]==i[o]):
		c=1
	else:
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:43:18) 
-- CODE:
from numpy import*

x=input("").upper
a=x.replace(" "," ")

i=0
o=-1

while(i<len(a)):
	if(i[a]==i[o]):
		c=1
	else:
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:43:56) 
-- CODE:
from numpy import*

x=input("").upper
a=x.replace(" "," ")

i=0
o=-1

while(i<len(a)):
	if(i[a]==i[o]):
		c=1
	if(i[a]!=i[o])
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
File "XXXX", line 12
    if(i[a]!=i[o])
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:44:18) 
-- CODE:
from numpy import*

x=input("").upper
a=x.replace(" "," ")

i=0
o=-1

while(i<len(a)):
	if(i[a]==i[o]):
		c=1
	if(i[a]!=i[o])
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
File "XXXX", line 12
    if(i[a]!=i[o])
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:44:22) 
-- CODE:
from numpy import*

x=input("").upper
a=x.replace(" "," ")

i=0
o=-1

while(i<len(a)):
	if(i[a]==i[o]):
		c=1
	if(i[a]!=i[o]):
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:15:53) 
-- CODE:
from numpy import*

x = input("").upper
a = x.replace(" ","")

i=0
o=-1

while(i<len(a)):
	if(a[i]==a[o]):
		c=1
	if(a[i]!=[o]):
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:15:58) 
-- CODE:
from numpy import*

x = input("").upper
a = x.replace(" ","")

i=0
o=-1

while(i<len(a)):
	if(a[i]==a[o]):
		c=1
	if(a[i]!=[o]):
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:16:10) 
-- CODE:
from numpy import*

x = input("").upper
a = x.replace(" ","")

i=0
o=-1

while(i<len(a)):
	if(a[i]==a[o]):
		c=1
	if(a[i]!=[o]):
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:16:27) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")

i=0
o=-1

while(i<len(a)):
	if(a[i]==a[o]):
		c=1
	if(a[i]!=[o]):
		c=0
	i+=1
	o-=1
print(a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:19:22) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k > -len(a)):
	p += a[k]
	k-=1
	
print(p)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:19:35) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k > -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:19:47) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k > -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:20:02) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:20:08) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:20:16) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:20:29) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:20:29) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:20:29) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:20:29) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:20:29) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:21:33) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
if(p==a):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:21:41) 
-- CODE:
from numpy import*

x = input("").upper()
a = x.replace(" ","")
print(a)

k=-1
p = ''

while(k >= -len(a)):
	p += a[k]
	k-=1
	
if(p==a):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.459311
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
